--- a/app/css/common.css
+++ b/app/css/common.css
@@ -22,6 +22,13 @@ p {
     margin: 0;
 }
 
+button {
+    width: 70px;
+    background-color: transparent;
+    border-radius: 3px;
+    border:1px solid #666;
+}
+
 .click-panel {
     position: absolute;
     z-index: 3;
